namespace java com.heepay.rpc.tpds.model

struct TransStatusResponseModel {
    1: string oldbusinessSeqNo;
    2: string dealStatus;
    3: string respCode;
    4: string respMsg;
    5: string accountNo;
    6: string secBankaccNo;
    7: string objectaccNo;
}